--- a/mmstudio/src/org/micromanager/acquisition/ChannelControlsPanel.form
+++ b/mmstudio/src/org/micromanager/acquisition/ChannelControlsPanel.form
@@ -20,41 +20,43 @@
     <AuxValue name="FormSettings_listenerGenerationStyle" type="java.lang.Integer" value="0"/>
     <AuxValue name="FormSettings_variablesLocal" type="java.lang.Boolean" value="false"/>
     <AuxValue name="FormSettings_variablesModifier" type="java.lang.Integer" value="2"/>
-    <AuxValue name="designerSize" type="java.awt.Dimension" value="-84,-19,0,5,115,114,0,18,106,97,118,97,46,97,119,116,46,68,105,109,101,110,115,105,111,110,65,-114,-39,-41,-84,95,68,20,2,0,2,73,0,6,104,101,105,103,104,116,73,0,5,119,105,100,116,104,120,112,0,0,1,44,0,0,1,-112"/>
   </AuxValues>
 
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Group type="102" attributes="0">
-              <EmptySpace min="6" pref="6" max="6" attributes="0"/>
-              <Component id="colorPickerLabel" min="-2" pref="16" max="-2" attributes="0"/>
-              <EmptySpace min="58" pref="58" max="58" attributes="0"/>
-              <Component id="fullButton" min="-2" pref="40" max="-2" attributes="0"/>
+          <Group type="102" alignment="0" attributes="0">
+              <Component id="channelNameCheckbox" min="-2" pref="130" max="-2" attributes="0"/>
+              <EmptySpace pref="68" max="32767" attributes="0"/>
           </Group>
-          <Component id="channelNameCheckbox" min="-2" pref="130" max="-2" attributes="0"/>
-          <Group type="102" attributes="0">
-              <EmptySpace min="80" pref="80" max="80" attributes="0"/>
-              <Component id="autoButton" min="-2" pref="40" max="-2" attributes="0"/>
+          <Group type="102" alignment="1" attributes="0">
+              <EmptySpace pref="124" max="32767" attributes="0"/>
+              <Group type="103" groupAlignment="0" attributes="0">
+                  <Group type="103" alignment="1" groupAlignment="0" attributes="0">
+                      <Component id="fullButton" alignment="0" min="-2" pref="40" max="-2" attributes="0"/>
+                      <Component id="autoButton" alignment="0" min="-2" pref="40" max="-2" attributes="0"/>
+                  </Group>
+                  <Group type="102" alignment="1" attributes="0">
+                      <EmptySpace min="-2" pref="11" max="-2" attributes="0"/>
+                      <Component id="colorPickerLabel" min="-2" pref="16" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="13" max="-2" attributes="0"/>
+                  </Group>
+              </Group>
+              <EmptySpace min="-2" pref="34" max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Group type="102" attributes="0">
-              <Group type="103" groupAlignment="0" attributes="0">
-                  <Group type="102" attributes="0">
-                      <EmptySpace min="23" pref="23" max="23" attributes="0"/>
-                      <Component id="colorPickerLabel" min="-2" pref="16" max="-2" attributes="0"/>
-                  </Group>
-                  <Group type="102" attributes="0">
-                      <EmptySpace min="20" pref="20" max="20" attributes="0"/>
-                      <Component id="fullButton" min="-2" pref="18" max="-2" attributes="0"/>
-                  </Group>
-                  <Component id="channelNameCheckbox" min="-2" max="-2" attributes="0"/>
-              </Group>
-              <EmptySpace min="1" pref="1" max="1" attributes="0"/>
-              <Component id="autoButton" min="-2" pref="18" max="-2" attributes="0"/>
+          <Group type="102" alignment="0" attributes="0">
+              <Component id="channelNameCheckbox" min="-2" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="0" max="-2" attributes="0"/>
+              <Component id="colorPickerLabel" min="-2" pref="16" max="-2" attributes="0"/>
+              <EmptySpace min="-2" max="-2" attributes="0"/>
+              <Component id="fullButton" min="-2" pref="16" max="-2" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
+              <Component id="autoButton" min="-2" pref="16" max="-2" attributes="0"/>
+              <EmptySpace pref="90" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -64,7 +66,7 @@
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.modules.form.editors2.FontEditor">
           <FontInfo relative="true">
-            <Font component="fullButton" property="font" relativeSize="true" size="-2"/>
+            <Font component="fullButton" property="font" relativeSize="false" size="9"/>
           </FontInfo>
         </Property>
         <Property name="text" type="java.lang.String" value="Full"/>
@@ -80,7 +82,7 @@
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.modules.form.editors2.FontEditor">
           <FontInfo relative="true">
-            <Font component="autoButton" property="font" relativeSize="true" size="-2"/>
+            <Font component="autoButton" property="font" relativeSize="false" size="9"/>
           </FontInfo>
         </Property>
         <Property name="text" type="java.lang.String" value="Auto"/>
