--- a/mmstudio/src/org/micromanager/acquisition/ChannelControlsPanel.form
+++ b/mmstudio/src/org/micromanager/acquisition/ChannelControlsPanel.form
@@ -101,6 +101,9 @@
           <Dimension value="[75, 30]"/>
         </Property>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="autoButtonActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="colorPickerLabel">
       <Properties>
