--- a/mmstudio/src/org/micromanager/acquisition/HyperstackControls.form
+++ b/mmstudio/src/org/micromanager/acquisition/HyperstackControls.form
@@ -39,7 +39,7 @@
               <Component id="fpsLabel" min="-2" max="-2" attributes="0"/>
               <EmptySpace min="-2" max="-2" attributes="0"/>
               <Component id="fpsField" min="-2" pref="34" max="-2" attributes="0"/>
-              <EmptySpace min="-2" max="-2" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
               <Component id="statusLineLabel" min="-2" pref="303" max="-2" attributes="0"/>
               <EmptySpace max="32767" attributes="0"/>
           </Group>
@@ -48,19 +48,19 @@
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" attributes="0">
-              <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="showFolderButton" min="-2" max="-2" attributes="0"/>
-                  <Component id="saveButton" min="-2" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                  <Component id="showFolderButton" alignment="0" max="32767" attributes="1"/>
+                  <Component id="saveButton" alignment="0" max="32767" attributes="1"/>
                   <Group type="103" alignment="0" groupAlignment="3" attributes="0">
                       <Component id="fpsLabel" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="fpsField" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="fpsField" alignment="0" max="32767" attributes="1"/>
                   </Group>
-                  <Component id="abortButton" alignment="0" min="-2" max="-2" attributes="0"/>
-                  <Component id="pauseAndResumeToggleButton" alignment="0" min="-2" max="-2" attributes="0"/>
-                  <Component id="metadataButton" alignment="0" min="-2" max="-2" attributes="0"/>
-                  <Component id="statusLineLabel" alignment="0" min="-2" pref="28" max="-2" attributes="0"/>
+                  <Component id="abortButton" alignment="0" max="32767" attributes="1"/>
+                  <Component id="pauseAndResumeToggleButton" alignment="0" max="32767" attributes="1"/>
+                  <Component id="metadataButton" alignment="0" max="32767" attributes="1"/>
+                  <Component id="statusLineLabel" alignment="0" max="32767" attributes="1"/>
               </Group>
-              <EmptySpace min="-2" max="-2" attributes="0"/>
+              <EmptySpace max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -190,7 +190,6 @@
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Lucida Grande" size="10" style="0"/>
         </Property>
-        <Property name="verticalAlignment" type="int" value="1"/>
         <Property name="horizontalTextPosition" type="int" value="2"/>
       </Properties>
     </Component>
