Better MetadataViewer responsiveness
git-svn-id: https://valelab.ucsf.edu/svn/micromanager2/trunk@5449 d0ab736e-dc22-4aeb-8dc9-08def0aa14fd

--- a/mmstudio/src/org/micromanager/acquisition/MetadataViewer.form
+++ b/mmstudio/src/org/micromanager/acquisition/MetadataViewer.form
@@ -47,6 +47,9 @@
       <Properties>
         <Property name="focusable" type="boolean" value="false"/>
       </Properties>
+      <Events>
+        <EventHandler event="stateChanged" listener="javax.swing.event.ChangeListener" parameters="javax.swing.event.ChangeEvent" handler="tabbedPaneStateChanged"/>
+      </Events>
 
       <Layout class="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout"/>
       <SubComponents>
