--- a/mmstudio/src/org/micromanager/acquisition/HyperstackControls.form
+++ b/mmstudio/src/org/micromanager/acquisition/HyperstackControls.form
@@ -33,11 +33,9 @@
               <Component id="abortButton" min="-2" max="-2" attributes="0"/>
               <EmptySpace min="-2" pref="0" max="-2" attributes="0"/>
               <Component id="pauseAndResumeToggleButton" min="-2" max="-2" attributes="0"/>
-              <EmptySpace min="-2" pref="3" max="-2" attributes="0"/>
-              <Component id="metadataButton" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
               <Component id="fpsLabel" min="-2" max="-2" attributes="0"/>
-              <EmptySpace min="-2" max="-2" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
               <Component id="fpsField" min="-2" pref="34" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
               <Component id="statusLineLabel" min="-2" pref="303" max="-2" attributes="0"/>
@@ -47,51 +45,24 @@
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Group type="102" attributes="0">
-              <Group type="103" groupAlignment="0" max="-2" attributes="0">
+          <Group type="102" alignment="0" attributes="0">
+              <Group type="103" groupAlignment="1" max="-2" attributes="0">
+                  <Component id="statusLineLabel" alignment="0" max="32767" attributes="1"/>
                   <Component id="showFolderButton" alignment="0" max="32767" attributes="1"/>
                   <Component id="saveButton" alignment="0" max="32767" attributes="1"/>
                   <Group type="103" alignment="0" groupAlignment="3" attributes="0">
                       <Component id="fpsLabel" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="fpsField" alignment="0" max="32767" attributes="1"/>
+                      <Component id="fpsField" alignment="3" max="32767" attributes="1"/>
                   </Group>
                   <Component id="abortButton" alignment="0" max="32767" attributes="1"/>
                   <Component id="pauseAndResumeToggleButton" alignment="0" max="32767" attributes="1"/>
-                  <Component id="metadataButton" alignment="0" max="32767" attributes="1"/>
-                  <Component id="statusLineLabel" alignment="0" max="32767" attributes="1"/>
               </Group>
-              <EmptySpace max="32767" attributes="0"/>
+              <EmptySpace pref="20" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
   </Layout>
   <SubComponents>
-    <Component class="javax.swing.JButton" name="metadataButton">
-      <Properties>
-        <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-          <Color blue="ff" green="ff" red="ff" type="rgb"/>
-        </Property>
-        <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="3" name="/org/micromanager/icons/application_view_list.png"/>
-        </Property>
-        <Property name="toolTipText" type="java.lang.String" value="View metadata and edit comments"/>
-        <Property name="focusable" type="boolean" value="false"/>
-        <Property name="horizontalTextPosition" type="int" value="0"/>
-        <Property name="maximumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-          <Dimension value="[30, 28]"/>
-        </Property>
-        <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-          <Dimension value="[30, 28]"/>
-        </Property>
-        <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-          <Dimension value="[30, 28]"/>
-        </Property>
-        <Property name="verticalTextPosition" type="int" value="3"/>
-      </Properties>
-      <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="metadataButtonActionPerformed"/>
-      </Events>
-    </Component>
     <Component class="javax.swing.JButton" name="showFolderButton">
       <Properties>
         <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
